Do not add things to Array.prototype, instead, use own versions of filter and each

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "repository": "git://github.com/mixu/miniee",
   "main": "miniee.js",
   "devDependencies": {
-    "async_testing": "0.3.x"
+    "nodeunit-runner": "git+ssh://git@github.com:mixu/nodeunit-runner.git#master"
   }
 }
